# amega-ai

./: .deepsource.toml  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  update_views.py
.github/: config.yml
.github/workflows/: ai-model.yml  ci.yml  code-quality.yml  data-management.yml  dependencies.yml  deploy-monitor.yml  docs.yml  ethics-compliance.yml  gpt-check.yml  issue-pr.yml  performance.yml  release.yml  view-count.yml  vscode-extension.yml
CONTRIBUTING/: index.html
about/: index.html
api/: index.html
api/auth/: index.html
api/endpoints/: index.html
api/examples/: index.html
api/reference/: index.html
backend/: __init__.py  app.py  auth.py  config.example.yml  config.py  llm_manager.py  pr_reviewer.py  rate_limit.py  security.py
development/architecture/: index.html
development/code-style/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: about.md  api.md  index.md
docs/api/: auth.md  endpoints.md  examples.md  index.md  reference.md
docs/development/: architecture.md  code-style.md  contributing.md  testing.md
docs/guides/: ai-models.md  best-practices.md  configuration.md  getting-started.md  installation.md  mlops.md  monitoring.md  security.md  troubleshooting.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
scripts/: init_db.py  setup_venv.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_auth.py  test_rate_limit.py
(+16 files in other folders)
