[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".env"]
targets = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=xml"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=65.5.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta" 